--- a/library.bib
+++ b/library.bib
@@ -7649,7 +7649,7 @@ month = jan
 
 @inproceedings{Forney:1973dt,
 author = {Forney, G D},
-title = {{The viterbi algorithm}},
+title = {{The Viterbi Algorithm}},
 booktitle = {Proceedings of the IEEE},
 year = {1973},
 pages = {268--278}
@@ -9194,7 +9194,7 @@ year = {2007},
 volume = {8},
 number = {3},
 pages = {104},
-annote = {Indeed not-to-distant future: 
+annote = {Indeed not-to-distant future:
 "6:15 pm to 7 pm.packed up to go home. Waited 45 minutes for shuttle bus to parking lot. while waiting, checked latest news on iPhone."}
 }
 
@@ -10579,4 +10579,3 @@ number = {2},
 pages = {599--607},
 month = sep
 }
-
