--- a/manual.bib
+++ b/manual.bib
@@ -399,3 +399,10 @@ author = "J. Wakeley and P.R. Wilton"
   year={2016},
   school={University of Oxford}
 }
+
+@article{Sharp:2016ez,
+author = {Sharp, K and Kretzschmar, W and Delaneau, O},
+title = {{Phasing for medical sequencing using rare variants and large haplotype reference panels}},
+journal = {Bioinformatics},
+year = {2016}
+}
