--- a/manual.bib
+++ b/manual.bib
@@ -406,3 +406,73 @@ title = {{Phasing for medical sequencing using rare variants and large haplotype
 journal = {Bioinformatics},
 year = {2016}
 }
+
+@article{Fu:1995hp,
+author = {Fu, Y X},
+title = {{Statistical Properties of Segregating Sites}},
+journal = {Theoretical population biology},
+year = {1995},
+volume = {48},
+number = {2},
+pages = {172--197},
+month = oct
+}
+
+@article{Gibson:2012kca,
+author = {Gibson, Greg},
+title = {{Rare and common variants: twenty arguments}},
+journal = {Nature Reviews Genetics},
+year = {2012},
+volume = {13},
+number = {2},
+pages = {135--145},
+month = jan
+}
+
+@article{Zuk:2014jv,
+author = {Zuk, Or and Schaffner, Stephen F and Samocha, Kaitlin and Do, Ron and Hechter, Eliana and Kathiresan, Sekar and Daly, Mark J and Neale, Benjamin M and Sunyaev, Shamil R and Lander, Eric S},
+title = {{Searching for missing heritability: designing rare variant association studies.}},
+journal = {Proceedings of the National Academy of Sciences},
+year = {2014},
+volume = {111},
+number = {4},
+pages = {E455--64},
+month = jan
+}
+
+@article{crow1970introduction,
+  title={An introduction to population genetics theory.},
+  author={Crow, James F and Kimura, Motoo and others},
+  journal={An introduction to population genetics theory.},
+  year={1970},
+  publisher={New York, Evanston and London: Harper \& Row, Publishers}
+}
+
+@article{Wright:1931uba,
+author = {Wright, S},
+title = {{Evolution in Mendelian Populations.}},
+journal = {Genetics},
+year = {1931},
+volume = {16},
+number = {2},
+pages = {97--159},
+month = mar
+}
+
+@article{fisher1930genetical,
+  title={The genetical theory of natural selection.},
+  author={Fisher, RA},
+  year={1930},
+  publisher={Clarendon Press}
+}
+
+@article{Wang:2005wy,
+author = {Wang, Jinliang},
+title = {{Estimation of effective population sizes from data on genetic markers}},
+journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+year = {2005},
+volume = {360},
+number = {1459},
+pages = {1395--1409},
+month = jul
+}
