--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -69,6 +69,8 @@
 \newacronym{pcr}{PCR}{polymerase chain reaction}
 \newacronym{pbwt}{PBWT}{positional Burrows-Wheeler transform}
 \newacronym{pcoa}{PCoA}{principal coordinates analysis}
+\newacronym{psmc}{PSMC}{pairwise sequentially Markovian coalescent}
+
 % Q
 \newacronym{qc}{QC}{quality control}
 % R
@@ -81,6 +83,7 @@
 \newacronym[plural=SNPs,firstplural=single-nucleotide polymorphisms~(SNP)]{snp}{SNP}{single-nucleotide polymorphism}
 \newacronym{sisu}{SISu}{Sequencing Initiative Suomi Project}
 \newacronym{se}{SE}{standard error}
+\newacronym{smc}{SMC}{sequentially Markov coalescent}
 % T
 \newacronym{t2d}{T2D}{type 2 diabetes}
 \newacronym{tmrca}{T\textsubscript{MRCA}}{time to the most recent common ancestor}
