--- a/manual.bib
+++ b/manual.bib
@@ -442,21 +442,10 @@ month = jan
 
 @article{crow1970introduction,
   title={An introduction to population genetics theory.},
-  author={Crow, James F and Kimura, Motoo and others},
+  author={Crow, James F and Kimura, Motoo},
   journal={An introduction to population genetics theory.},
   year={1970},
   publisher={New York, Evanston and London: Harper \& Row, Publishers}
-}
-
-@article{Wright:1931uba,
-author = {Wright, S},
-title = {{Evolution in Mendelian Populations.}},
-journal = {Genetics},
-year = {1931},
-volume = {16},
-number = {2},
-pages = {97--159},
-month = mar
 }
 
 @article{fisher1930genetical,
@@ -475,4 +464,23 @@ volume = {360},
 number = {1459},
 pages = {1395--1409},
 month = jul
+}
+
+@book{ewens2012mathematical,
+  title={Mathematical population genetics 1: theoretical introduction},
+  author={Ewens, Warren J},
+  volume={27},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{labuda1996linkage,
+  title={Linkage disequilibrium analysis in young populations: pseudo-vitamin D-deficiency rickets and the founder effect in French Canadians.},
+  author={Labuda, Malgorzata and Labuda, Damian and Korab-Laskowska, Maria and Cole, David E and Zietkiewicz, Eva and Weissenbach, Jean and Popowska, Ewa and Pronicka, Ewa and Root, Allen W and Glorieux, Francis H},
+  journal={American journal of human genetics},
+  volume={59},
+  number={3},
+  pages={633},
+  year={1996},
+  publisher={Elsevier}
 }
