--- a/main.tex
+++ b/main.tex
@@ -10,8 +10,8 @@
 
 
 % \includeonly{frontmatter}
-\includeonly{chapter1/one}
-% \includeonly{chapter2/two}
+% \includeonly{chapter1/one}
+\includeonly{chapter2/two}
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
 % \includeonly{chapter5/five}
