--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,8 @@
 
 % \includeonly{frontmatter}
 % \includeonly{chapter1/one}
-\includeonly{chapter2/two}
-% \includeonly{chapter3/three}
+% \includeonly{chapter2/two}
+\includeonly{chapter3/three}
 % \includeonly{chapter4/four}
 % \includeonly{chapter5/five}
 % \includeonly{chapter6/six}
@@ -72,7 +72,7 @@ Author={Patrick K. Albers}%
 \doublespacing
 
 %\setlength{\textbaselineskip}{32pt plus2pt}
-\setlength{\textbaselineskip}{23pt plus2pt minus2pt}
+\setlength{\textbaselineskip}{22pt plus2pt minus2pt}
 %\setlength{\textbaselineskip}{20pt plus2pt}
 %\setlength{\textbaselineskip}{19pt plus2pt minus1pt}
 %\setlength{\textbaselineskip}{18pt plus2pt minus1pt}
