--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,8 @@
 % \includeonly{frontmatter}
 % \includeonly{chapter1/one}
 % \includeonly{chapter2/two}
-\includeonly{chapter3/three}
-% \includeonly{chapter4/four}
+% \includeonly{chapter3/three}
+\includeonly{chapter4/four}
 % \includeonly{chapter5/five}
 % \includeonly{chapter6/six}
 
@@ -80,8 +80,6 @@ Author={Patrick K. Albers}%
 \setlength{\frontmatterbaselineskip}{17pt plus1pt minus2pt}
 \setlength{\baselineskip}{\textbaselineskip}
 
-\setlength{\floatsep}{\textfloatsep}
-\setlength{\intextsep}{\textfloatsep}
 
 
 % Counters
