Ch4 up to 4.4.4

--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,8 @@ Author={Patrick K. Albers}%
 
 
 % Line spacing
-\doublespacing
+%\doublespacing
+\onehalfspacing
 
 %\setlength{\textbaselineskip}{32pt plus2pt}
 \setlength{\textbaselineskip}{20pt plus2pt minus2pt}
