Minor changes to Ch4

--- a/manual.bib
+++ b/manual.bib
@@ -381,7 +381,7 @@ author = "J. Wakeley and P.R. Wilton"
 }
 
 @article{watterson1976,
-	title = "Reversibility and the age of an allele. I. Moran's infinitely many neutral alleles model",
+	title = {{Reversibility and the age of an allele. I. Moran's infinitely many neutral alleles model}},
 	journal = "Theoretical Population Biology",
 	volume = "10",
 	number = "3",
