--- a/dphilthesis.cls
+++ b/dphilthesis.cls
@@ -263,6 +263,7 @@ list-final-separator={, and }%
 \soulregister\Citet7
 \soulregister\ref7
 \soulregister\cref7
+\soulregister\ctref7
 \soulregister\cpref7
 \soulregister\Cpref7
 \soulregister\pref7
