--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -40,7 +40,8 @@
 \newacronym{ibd}{IBD}{identity by descent}
 \newacronym{ibs}{IBS}{identity by state}
 \newacronym{ipg}{IPG}{Illumina Platinum Genomes Project}
-\newacronym{iid}{$i.i.d.$}{independent and is identically distributed}
+\newacronym{iid}{\emph{i.i.d.}}{independent and identically distributed}
+
 % J
 
 % K
@@ -66,6 +67,7 @@
 % P
 \newacronym{pca}{PCA}{principle component analysis}
 \newacronym{pdf}{PDF}{probability density function}
+\newacronym{pmf}{PMF}{probability mass function}
 \newacronym{pcr}{PCR}{polymerase chain reaction}
 \newacronym{pbwt}{PBWT}{positional Burrows-Wheeler transform}
 \newacronym{pcoa}{PCoA}{principal coordinates analysis}
