--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 % \includeonly{chapter1/one}
 % \includeonly{chapter2/two}
 % \includeonly{chapter3/three}
-\includeonly{chapter4/four}
-% \includeonly{chapter5/five}
+% \includeonly{chapter4/four}
+\includeonly{chapter5/five}
 % \includeonly{chapter6/six}
 
 
