Added plots and results to Ch5

--- a/manual.bib
+++ b/manual.bib
@@ -484,3 +484,10 @@ month = jul
   year={1996},
   publisher={Elsevier}
 }
+
+@book{papoulis2002probability,
+  title={Probability, random variables, and stochastic processes},
+  author={Papoulis, Athanasios and Pillai, S Unnikrishna},
+  year={2002},
+  publisher={Tata McGraw-Hill Education}
+}
