Added text and more structure

--- a/manual.bib
+++ b/manual.bib
@@ -491,3 +491,22 @@ month = jul
   year={2002},
   publisher={Tata McGraw-Hill Education}
 }
+
+@article{lindsay1988composite,
+  title={Composite likelihood methods},
+  author={Lindsay, Bruce G},
+  journal={Contemporary mathematics},
+  volume={80},
+  number={1},
+  pages={221--239},
+  year={1988}
+}
+
+@article{pauli2011bayesian,
+  title={Bayesian composite marginal likelihoods},
+  author={Pauli, Francesco and Racugno, Walter and Ventura, Laura},
+  journal={Statistica Sinica},
+  pages={149--164},
+  year={2011},
+  publisher={JSTOR}
+}
