--- a/main.tex
+++ b/main.tex
@@ -14,8 +14,8 @@
 % \includeonly{chapter2/two}
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
-\includeonly{chapter5/five}
-% \includeonly{chapter6/six}
+% \includeonly{chapter5/five}
+\includeonly{chapter6/six}
 
 
 % Thesis information
