--- a/manual.bib
+++ b/manual.bib
@@ -510,3 +510,47 @@ month = jul
   year={2011},
   publisher={JSTOR}
 }
+
+@article{schiffels2014inferring,
+  title={Inferring human population size and separation history from multiple genome sequences},
+  author={Schiffels, Stephan and Durbin, Richard},
+  journal={Nature genetics},
+  volume={46},
+  number={8},
+  pages={919--925},
+  year={2014},
+  publisher={Nature Research}
+}
+
+@article{marjoram2006fast,
+  title={Fast" coalescent" simulation},
+  author={Marjoram, Paul and Wall, Jeff D},
+  journal={BMC genetics},
+  volume={7},
+  number={1},
+  pages={16},
+  year={2006},
+  publisher={BioMed Central}
+}
+
+@article{enattah2002identification,
+  title={Identification of a variant associated with adult-type hypolactasia},
+  author={Enattah, Nabil Sabri and Sahi, Timo and Savilahti, Erkki and Terwilliger, Joseph D and Peltonen, Leena and J{\"a}rvel{\"a}, Irma},
+  journal={Nature genetics},
+  volume={30},
+  number={2},
+  pages={233--237},
+  year={2002},
+  publisher={Nature Publishing Group}
+}
+
+@article{bersaglieri2004genetic,
+  title={Genetic signatures of strong recent positive selection at the lactase gene},
+  author={Bersaglieri, Todd and Sabeti, Pardis C and Patterson, Nick and Vanderploeg, Trisha and Schaffner, Steve F and Drake, Jared A and Rhodes, Matthew and Reich, David E and Hirschhorn, Joel N},
+  journal={The American Journal of Human Genetics},
+  volume={74},
+  number={6},
+  pages={1111--1120},
+  year={2004},
+  publisher={Elsevier}
+}
