--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -101,7 +101,7 @@
 \newacronym[plural=SNPs,firstplural=single-nucleotide polymorphisms~(SNP)]{snp}{SNP}{single-nucleotide polymorphism}
 \newacronym{sisu}{SISu}{Sequencing Initiative Suomi Project}
 \newacronym{se}{SE}{standard error}
-\newacronym{smc}{SMC}{sequentially Markov coalescent}
+\newacronym{smc}{SMC}{Sequentially Markov Coalescent}
 
 % T
 \newacronym{t2d}{T2D}{type 2 diabetes}
