--- a/main.tex
+++ b/main.tex
@@ -134,22 +134,22 @@ can complete the following sentence:\\
 }\label{biblio}
 
 
-\cleardoublepage
-\thispagestyle{empty}
-\vspace*{\fill}
-\begin{quote}
-\onehalfspacing
-\begin{enumerate}\itshape
-\item I have told you more than I know \textup{[...]}.
-\item What I have told you is subject to change without notice.
-\item I hope I raised more questions than I have given answers.
-\item In any case, as usual, a lot more work is necessary.
-\end{enumerate}
-\begin{flushright}
--- Fuller Albright
-\end{flushright}
-\end{quote}
-\vspace*{\fill}
+% \cleardoublepage
+% \thispagestyle{empty}
+% \vspace*{\fill}
+% \begin{quote}
+% \onehalfspacing
+% \begin{enumerate}\itshape
+% \item I have told you more than I know \textup{[...]}.
+% \item What I have told you is subject to change without notice.
+% \item I hope I raised more questions than I have given answers.
+% \item In any case, as usual, a lot more work is necessary.
+% \end{enumerate}
+% \begin{flushright}
+% -- Fuller Albright
+% \end{flushright}
+% \end{quote}
+% \vspace*{\fill}
 
 
 \end{document}
