Thesis correction as submitted to examiner

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
 % \includeonly{chapter5/five}
-\includeonly{chapter6/six}
+% \includeonly{chapter6/six}
 
 
 % Thesis information
