--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 
 
 
-\includeonly{frontmatter}
+% \includeonly{frontmatter}
 % \includeonly{chapter1/one}
 % \includeonly{chapter2/two}
 % \includeonly{chapter3/three}
