Formating in Ch1

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 
 
 % \includeonly{frontmatter}
-% \includeonly{chapter1/one}
+\includeonly{chapter1/one}
 % \includeonly{chapter2/two}
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
