--- a/main.tex
+++ b/main.tex
@@ -10,8 +10,8 @@
 
 
 % \includeonly{frontmatter}
-\includeonly{chapter1/one}
-% \includeonly{chapter2/two}
+% \includeonly{chapter1/one}
+\includeonly{chapter2/two}
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
 % \includeonly{chapter5/five}
@@ -112,11 +112,13 @@ Author={Patrick K. Albers}%
 \cleardoublepage
 
 \topquote[7cm]{%
-The key test for an acronym is to ask whether it helps or hurts communication.%
+\vspace*{-8mm}
+The key test for an acronym is to ask whether \\
+it helps or hurts communication.%
 }{Elon Musk}
 
 {%
-\onehalfspacing%
+\singlespacing%
 \small%
 \printglossary[type=\acronymtype,title=Abbreviations]%
 }
