--- a/main.tex
+++ b/main.tex
@@ -10,11 +10,11 @@
 
 
 % \includeonly{frontmatter}
-\includeonly{chapter1/one}
+% \includeonly{chapter1/one}
 % \includeonly{chapter2/two}
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
-% \includeonly{chapter5/five}
+\includeonly{chapter5/five}
 % \includeonly{chapter6/six}
 
 
