--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 % \includeonly{chapter2/two}
 % \includeonly{chapter3/three}
 % \includeonly{chapter4/four}
-\includeonly{chapter5/five}
+% \includeonly{chapter5/five}
 % \includeonly{chapter6/six}
 
 
@@ -119,7 +119,7 @@ it helps or hurts communication.%
 
 {%
 \singlespacing%
-\small%
+\footnotesize%
 \printglossary[type=\acronymtype,title=Abbreviations]%
 }
 
